# rust_lambda_restapi

./: .gitignore  Cargo.toml  README.md
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
src/: event.rs  event_service.rs  handler.rs  handler_params.rs  main.rs
