[package]
name = "rust_lambda_restapi"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.82"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.21.0"
aws-smithy-types = "1.1.8"
axum = "0.7.5"
lambda_http = "0.11.1"
serde = "1.0.197"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.115"
tokio = { version = "1", features = ["macros"] }

